examples/test/testpolicy9313.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9313
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key25: value8
      key22: value7
      key23: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value7
          key5: value34
      podSelector:
        matchLabels:
          key37: value7
          key38: value47
